--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -21,6 +21,13 @@ acapy:
         expiry_minutes: 2880
         auto_approve:  true
         auto_issuer: true
+      autoscaling:
+        enabled: false
+        minReplicas: 1
+        maxReplicas: 10
+        targetCPUUtilizationPercentage: 80
+        targetMemoryUtilizationPercentage: 80
+        stabilizationWindowSeconds: 300
   resources:
     limits:
       cpu: 400m
@@ -50,15 +57,15 @@ ui:
     active: false
     showInnkeeperAdminLogin: false
     showWritableComponents: false
-    authority: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-nrm
-    jwksUri: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-nrm/protocol/openid-connect/certs
+    authority: ""
+    jwksUri: ""
   ariesDetails:
     ledgerDescription: "bcovrin-test"
   smtp:
     server: apps.smtp.gov.bc.ca
     port: 25
     senderAddress: DoNotReplyTractionSandbox@gov.bc.ca
-    innkeeperInbox: "lucas.o'neil@gov.bc.ca,emiliano.sune@quartech.com,rajpal.chauhan@gov.bc.ca"
+    innkeeperInbox: ""
   networkPolicy:
     enabled: true
     ingress:
