changing values as suggested by @esune
Signed-off-by: Rajpal Chauhan <rajpal.chauhan@gov.bc.ca>

--- a/helm-values/tenant-ui/values-sandbox.yaml
+++ b/helm-values/tenant-ui/values-sandbox.yaml
@@ -33,8 +33,8 @@ traction:
         network.openshift.io/policy-group: ingress
 oidc:
   active: false
-  showInnkeeperAdminLogin: false
-  showWritableComponents: false
+  showInnkeeperAdminLogin: true
+  showWritableComponents: true
   authority: ""
   jwksUri: ""
 ariesDetails:
