--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -9,12 +9,20 @@ acapy:
       genesis_url: 'http://test.bcovrin.vonx.io/genesis'
       endorser_did: '4pgFAjnSVKCr7CMfpqDjhu'
       endorser_alias: 'bcovrin-test-endorser'
-    - id: bcovrin-dev
-      is_production: true
-      is_write: true
-      genesis_url: 'http://dev.bcovrin.vonx.io/genesis'
-      endorser_did: 'N5bxk3jWkpZ2tEaMtjPjPa'
-      endorser_alias: 'bcovrin-dev-endorser'
+  plugin-config.yml:
+    traction_innkeeper:
+      innkeeper_wallet:
+        print_key: false
+        print_token: false
+        connect_to_endorser:
+          - endorser_alias: bcovrin-test-endorser
+            ledger_id: bcovrin-test
+        create_public_did:
+          - bcovrin-test
+      reservation:
+        expiry_minutes: 2880
+        auto_approve: false
+        auto_issuer: false
   networkPolicy:
     enabled: true
     ingress:
