--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -7,13 +7,20 @@ acapy:
       generated: true
     pluginInnkeeper:
       generated: true
+  ledgers.yml:
+    - id: bcovrin-test
+      is_production: true
+      is_write: true
+      genesis_url: 'http://test.bcovrin.vonx.io/genesis'
+      endorser_did: 'Ket75eV5UQvVkW2XBjgDH7'
+      endorser_alias: 'bcovrin-test-endorser'
   plugin-config.yml:
     traction_innkeeper:
       innkeeper_wallet:
         print_key: true
         print_token: true
         connect_to_endorser:
-          - endorser_alias: endorser
+          - endorser_alias: bcovrin-test-endorser
             ledger_id: bcovrin-test
         create_public_did:
           - bcovrin-test
@@ -72,6 +79,12 @@ ui:
       enabled: true
       namespaceSelector:
         network.openshift.io/policy-group: ingress
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
 ingress:
   annotations:
     route.openshift.io/termination: edge
@@ -83,4 +96,3 @@ postgresql:
     requests:
       cpu: 200m
       memory: 820Mi
-      
