--- a/helm-values/vc-authn-oidc/dev.yaml
+++ b/helm-values/vc-authn-oidc/dev.yaml
@@ -22,7 +22,7 @@ resources:
     memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 1
   maxReplicas: 2
   targetCPUUtilizationPercentage: 80
