--- a/helm-values/vc-authn-oidc/prod.yaml
+++ b/helm-values/vc-authn-oidc/prod.yaml
@@ -22,7 +22,7 @@ resources:
     memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 3
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
