--- a/helm-values/vc-authn-oidc/test.yaml
+++ b/helm-values/vc-authn-oidc/test.yaml
@@ -22,7 +22,7 @@ resources:
     memory: 128Mi
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 2
   maxReplicas: 4
   targetCPUUtilizationPercentage: 80
