Set mongodb resource requests, limits, and adjust probes
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/vc-authn-oidc/dev.yaml
+++ b/helm-values/vc-authn-oidc/dev.yaml
@@ -90,3 +90,17 @@ acapy:
       enabled: true
       namespaceSelector:
         network.openshift.io/policy-group: ingress
+mongodb:
+  resources:
+    limits:
+      cpu: 300m
+      memory: 1000Mi
+    requests:
+      cpu: 40m
+      memory: 450Mi
+  readinessProbe:
+    enabled: true
+    timeoutSeconds: 10
+  livenessProbe:
+    enabled: true
+    timeoutSeconds: 10
