--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -12,7 +12,7 @@ acapy:
       is_production: true
       is_write: true
       genesis_url: 'http://test.bcovrin.vonx.io/genesis'
-      endorser_did: 'Ket75eV5UQvVkW2XBjgDH7'
+      endorser_did: 'DfQetNSm7gGEHuzfUvpfPn'
       endorser_alias: 'bcovrin-test-endorser'
   plugin-config.yml:
     traction_innkeeper:
@@ -58,6 +58,7 @@ tenant_proxy:
       namespaceSelector:
         network.openshift.io/policy-group: ingress
 ui:
+  quickConnectEndorserName: "bcovrin-test-endorser"
   image:
     pullPolicy: Always
   oidc:
