Handle uninstall sandbox action when no release is installed
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/.github/workflows/uninstall_install_sandbox.yaml
+++ b/.github/workflows/uninstall_install_sandbox.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Uninstall Traction via Helm
         run: |
-          helm uninstall traction-sandbox -n ${{ secrets.OPENSHIFT_NAMESPACE }} --wait --timeout=20m
+          helm uninstall traction-sandbox -n ${{ secrets.OPENSHIFT_NAMESPACE }} --wait --timeout=20m || true
 
       - name: Remove Traction Openshift Objects
         run: |
