Set banner for test env
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -53,6 +53,11 @@ tenant_proxy:
 ui:
   image:
     pullPolicy: Always
+  ux:
+    infoBanner:
+      message: "Traction TEST Environment"
+      messageLevel: info
+      showMessage: true
   showOIDCReservationLogin: true
   oidc:
     active: true
