--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -67,6 +67,28 @@ ui:
     showWritableComponents: true
     authority: ""
     jwksUri: ""
+    reservationForm: >-
+      {
+        "formDataSchema": {
+          "type": "object",
+          "properties": {
+            "organization": {
+              "type": "string"
+            }
+          },
+          "required": ["organization"]
+        },
+        "formUISchema": {
+          "type": "VerticalLayout",
+          "elements": [
+            {
+              "type": "Control",
+              "scope": "#/properties/organization",
+              "label": "Company/organization "
+            }
+          ]
+        }
+      }
   ariesDetails:
     ledgerDescription: "bcovrin-test"
   smtp:
