--- a/helm-values/traction/values-production.yaml
+++ b/helm-values/traction/values-production.yaml
@@ -4,9 +4,9 @@ acapy:
     - id: candy-prod
       is_production: true
       is_write: true
-      genesis_url: 'https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis'
-      endorser_did: 'LTNyw5R14J66CrF7tmV3i8'
-      endorser_alias: 'candy-prod-endorser'
+      genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
+      endorser_did: "LTNyw5R14J66CrF7tmV3i8"
+      endorser_alias: "candy-prod-endorser"
   plugin-config.yml:
     traction_innkeeper:
       innkeeper_wallet:
