--- a/helm-values/traction/values-test.yaml
+++ b/helm-values/traction/values-test.yaml
@@ -6,9 +6,9 @@ acapy:
     - id: bcovrin-test
       is_production: true
       is_write: true
-      genesis_url: 'http://test.bcovrin.vonx.io/genesis'
-      endorser_did: '4pgFAjnSVKCr7CMfpqDjhu'
-      endorser_alias: 'bcovrin-test-endorser'
+      genesis_url: "http://test.bcovrin.vonx.io/genesis"
+      endorser_did: "4pgFAjnSVKCr7CMfpqDjhu"
+      endorser_alias: "bcovrin-test-endorser"
   plugin-config.yml:
     traction_innkeeper:
       innkeeper_wallet:
