Additional innkeeper email
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/traction/values-production.yaml
+++ b/helm-values/traction/values-production.yaml
@@ -121,7 +121,7 @@ ui:
     server: apps.smtp.gov.bc.ca
     port: 25
     senderAddress: DoNotReplyTractionPROD@gov.bc.ca
-    innkeeperInbox: lucas.o'neil@gov.bc.ca
+    innkeeperInbox: "lucas.o'neil@gov.bc.ca,emiliano.sune@quartech.com"
   networkPolicy:
     enabled: true
     ingress:
