disable write components
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/traction/values-production.yaml
+++ b/helm-values/traction/values-production.yaml
@@ -72,6 +72,7 @@ ui:
   oidc:
     active: true
     showInnkeeperAdminLogin: true
+    showWritableComponents: false
     authority: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-nrm
     jwksUri: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-nrm/protocol/openid-connect/certs
     reservationForm: >-
