--- a/openshift/templates/backup/config/test/backup.conf
+++ b/openshift/templates/backup/config/test/backup.conf
@@ -25,7 +25,7 @@
 # Cron Scheduling:
 # -----------------------------------------------------------
 # List your backup and verification schedule(s) here as well.
-# The schedule(s) must be listed as cron tabs that 
+# The schedule(s) must be listed as cron tabs that
 # execute the script in 'scheduled' mode:
 #   - ./backup.sh -s
 #
@@ -53,6 +53,7 @@ postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
 postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim-qa/agent_idim_qa_wallet
 postgres=wallet-lcrb/agent_lcrb_wallet
+postgres=wallet-idim-preprod/agent_idim_preprod_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
