Fix banner message override for sandbox deployment
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/.github/workflows/uninstall_install_sandbox.yaml
+++ b/.github/workflows/uninstall_install_sandbox.yaml
@@ -80,7 +80,7 @@ jobs:
           helm upgrade --install \
           -n ${{ secrets.OPENSHIFT_NAMESPACE }} --wait --timeout=7m \
           -f ./helm-values/traction/values-sandbox.yaml \
-          --set .Values.ui.ux.infoBanner.message="${BANNER_MESSAGE}" \
+          --set ui.ux.infoBanner.message="${BANNER_MESSAGE}" \
           traction-sandbox traction/traction
 
       - name: Rocket.Chat Notification
