Don't rely on default json vals for realm
Signed-off-by: Lucas <lucasoneil@gmail.com>

--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -70,6 +70,7 @@ ui:
     showWritableComponents: true
     authority: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz
     jwksUri: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz/protocol/openid-connect/certs
+    realm: "digitaltrust-citz"
     reservationForm: >-
       {
         "formDataSchema": {
