--- a/helm-values/traction/values-production.yaml
+++ b/helm-values/traction/values-production.yaml
@@ -75,6 +75,7 @@ ui:
     showWritableComponents: false
     authority: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz
     jwksUri: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz/protocol/openid-connect/certs
+    realm: "digitaltrust-citz"
     reservationForm: >-
       {
         "formDataSchema": {
