--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -68,8 +68,8 @@ ui:
     active: false
     showInnkeeperAdminLogin: true
     showWritableComponents: true
-    authority: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz
-    jwksUri: https://loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz/protocol/openid-connect/certs
+    authority: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz
+    jwksUri: https://dev.loginproxy.gov.bc.ca/auth/realms/digitaltrust-citz/protocol/openid-connect/certs
     realm: "digitaltrust-citz"
     reservationForm: >-
       {
