Increase sandbox database PVC size to 5Gb
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -116,10 +116,13 @@ ingress:
   annotations:
     route.openshift.io/termination: edge
 postgresql:
-  resources:
-    limits:
-      cpu: 400m
-      memory: 1600Mi
-    requests:
-      cpu: 200m
-      memory: 820Mi
+  primary:
+    persistence:
+      size: 5Gi
+    resources:
+      limits:
+        cpu: 400m
+        memory: 1600Mi
+      requests:
+        cpu: 200m
+        memory: 820Mi
