Increase resource limits for postgresql
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/helm-values/traction/values-sandbox.yaml
+++ b/helm-values/traction/values-sandbox.yaml
@@ -121,8 +121,8 @@ postgresql:
       size: 5Gi
     resources:
       limits:
-        cpu: 400m
-        memory: 1600Mi
+        cpu: 2
+        memory: 4000Mi
       requests:
         cpu: 200m
         memory: 820Mi
