Remove deprecated vc-authn from backup config
Signed-off-by: Wade Barnes <wade@neoterictech.ca>

--- a/openshift/templates/backup/config/prod/backup.conf
+++ b/openshift/templates/backup/config/prod/backup.conf
@@ -25,7 +25,7 @@
 # Cron Scheduling:
 # -----------------------------------------------------------
 # List your backup and verification schedule(s) here as well.
-# The schedule(s) must be listed as cron tabs that 
+# The schedule(s) must be listed as cron tabs that
 # execute the script in 'scheduled' mode:
 #   - ./backup.sh -s
 #
@@ -46,11 +46,11 @@
 # 0 1 * * * default ./backup.sh -s
 # 0 4 * * * default ./backup.sh -s -v all
 # ============================================================
-postgres=vc-authn-database/vc_authn
+# postgres=vc-authn-database/vc_authn
 postgres=wallet-lsbc/agent_lsbc_wallet
 postgres=wallet-buybc/agent_buybc_wallet
-postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
-postgres=vc-authn-wallet/vc_authn_agent_wallet
+# postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
+# postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim/agent_idim_wallet
 postgres=wallet-lcrb/agent_lcrb_wallet
 
