--- a/openshift/templates/backup/config/test/backup.conf
+++ b/openshift/templates/backup/config/test/backup.conf
@@ -46,11 +46,11 @@
 # 0 1 * * * default ./backup.sh -s
 # 0 4 * * * default ./backup.sh -s -v all
 # ============================================================
-postgres=vc-authn-database/vc_authn
+# postgres=vc-authn-database/vc_authn
 postgres=wallet-lsbc/agent_lsbc_wallet
 postgres=wallet-buybc/agent_buybc_wallet
-postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
-postgres=vc-authn-wallet/vc_authn_agent_wallet
+# postgres=vc-authn-wallet/vc_authn_agent_rev_wallet
+# postgres=vc-authn-wallet/vc_authn_agent_wallet
 postgres=wallet-idim-qa/agent_idim_qa_wallet
 postgres=wallet-lcrb/agent_lcrb_wallet
 postgres=wallet-idim-preprod/agent_idim_preprod_wallet
