update storage class to use netapp-block-standard
Signed-off-by: Ivan Polchenko <2119240+i5okie@users.noreply.github.com>

--- a/helm-values/monitoring/grafana-database.yaml
+++ b/helm-values/monitoring/grafana-database.yaml
@@ -1159,7 +1159,7 @@ backup:
       ## If undefined (the default) or set to null, no storageClassName spec is
       ## set, choosing the default provisioner.
       ##
-      storageClass: "netapp-file-backup"
+      storageClass: "netapp-block-standard"
       ## @param backup.cronjob.storage.accessModes PV Access Mode
       ##
       accessModes:
